codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__app_link_view__tests__app_link_view_enable_suggestion_with_reason.snap
---
source: tui/src/bottom_pane/app_link_view.rs
expression: "render_snapshot(&view, Rect::new(0, 0, 72, view.desired_height(72)))"
---

  Google Calendar
  Plan events and schedules.

  Plan and reference events from your calendar

  Нажмите $ чтобы вставить это приложение в запрос.

  Enable this app to use it for the current request.
  Новые приложения появляются в разделе /apps в течение нескольких минут.


  › 1. Открыть страницу приложения
    2. Включить приложение
    3. Назад
  Use tab / ↑ ↓ to move, enter to select, esc to close
