codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__app_link_view__tests__app_link_view_install_suggestion_with_reason.snap
---
source: tui/src/bottom_pane/app_link_view.rs
expression: "render_snapshot(&view, Rect::new(0, 0, 72, view.desired_height(72)))"
---

  Google Calendar
  Plan events and schedules.

  Plan and reference events from your calendar

  Install this app in your browser, then return here.
  Новые приложения появляются в разделе /apps в течение нескольких минут.
  После установки снова нажмите $ чтобы добавить приложение в запрос.


  › 1. Установить приложение
    2. Назад
  Use tab / ↑ ↓ to move, enter to select, esc to close
